src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-omT-ofT-dhU-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen maximized: true\nopen floating: true\ndefault window height: U\nwant fullscreen: BU"
expression: snapshot
---
initial configure:
size: 0 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
